Update Windows build instructions
closes #90
refs #122